[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/Integration/GameJoltMenu/GameJoltMenu.gd" type="Script" id=1]
[ext_resource path="res://GUI/Themes/MenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://Font/Hack/HackHeader.tres" type="DynamicFont" id=3]

[sub_resource type="Animation" id=1]
resource_name = "login_fail"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("FailLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FailLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="GameJoltMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 440.0
margin_top = 200.0
margin_right = 840.0
margin_bottom = 520.0
rect_min_size = Vector2( 400, 320 )
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 360.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "Game Jolt"
align = 1

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 37.0
margin_right = 360.0
margin_bottom = 37.0

[node name="InstructionsLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 41.0
margin_right = 360.0
margin_bottom = 79.0
size_flags_vertical = 3
text = "You are playing the Game Jolt version! Please log in to unlock trophies."
align = 1
valign = 1
autowrap = true

[node name="ReferenceRect2" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 83.0
margin_right = 360.0
margin_bottom = 83.0

[node name="Login" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 87.0
margin_right = 360.0
margin_bottom = 151.0
rect_min_size = Vector2( 0, 64 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer/Login"]
margin_right = 360.0
margin_bottom = 30.0
size_flags_vertical = 3

[node name="UsernameLineEdit" type="LineEdit" parent="CenterContainer/Panel/VBoxContainer/Login/HBoxContainer"]
margin_right = 207.0
margin_bottom = 30.0
size_flags_horizontal = 3
placeholder_text = "Username"

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/Login/HBoxContainer"]
margin_left = 211.0
margin_right = 219.0
margin_bottom = 30.0
rect_min_size = Vector2( 8, 0 )

[node name="TokenLineEdit" type="LineEdit" parent="CenterContainer/Panel/VBoxContainer/Login/HBoxContainer"]
margin_left = 223.0
margin_right = 360.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66
secret = true
placeholder_text = "Token"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer/Login"]
margin_top = 34.0
margin_right = 360.0
margin_bottom = 64.0
size_flags_vertical = 3

[node name="LoginButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/Login/HBoxContainer2"]
margin_right = 70.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Log In"

[node name="AutoLoginButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/Login/HBoxContainer2"]
margin_left = 74.0
margin_right = 215.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Log In (Auto)"

[node name="Control" type="Control" parent="CenterContainer/Panel/VBoxContainer/Login/HBoxContainer2"]
margin_left = 219.0
margin_right = 360.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="FailLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/Login/HBoxContainer2/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Login Fail"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginFailAnimationPlayer" type="AnimationPlayer" parent="CenterContainer/Panel/VBoxContainer/Login/HBoxContainer2/Control"]
anims/login_fail = SubResource( 1 )

[node name="Logout" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
visible = false
margin_top = 183.0
margin_right = 360.0
margin_bottom = 247.0
rect_min_size = Vector2( 0, 64 )

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/Logout"]
margin_right = 360.0
margin_bottom = 30.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Login Successful"
align = 1
valign = 1

[node name="LogoutButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/Logout"]
margin_left = 148.0
margin_top = 34.0
margin_right = 212.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Log Out"

[node name="ReferenceRect3" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 155.0
margin_right = 360.0
margin_bottom = 155.0

[node name="InstructionsLabel2" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 159.0
margin_right = 360.0
margin_bottom = 197.0
size_flags_vertical = 3
text = "If you choose to skip this step you can always log in through the options menu."
align = 1
valign = 1
autowrap = true

[node name="ReferenceRect4" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 201.0
margin_right = 360.0
margin_bottom = 201.0

[node name="InstructionsLabel3" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 205.0
margin_right = 360.0
margin_bottom = 243.0
size_flags_vertical = 3
text = "In the browser version, you can hit \"Log In (Auto)\" without having to enter your details."
align = 1
valign = 1
autowrap = true

[node name="ReferenceRect5" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 247.0
margin_right = 360.0
margin_bottom = 247.0

[node name="ContinueButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_left = 132.0
margin_top = 251.0
margin_right = 228.0
margin_bottom = 279.0
rect_min_size = Vector2( 96, 28 )
size_flags_horizontal = 4
text = "Skip"
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Login/HBoxContainer2/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Login/HBoxContainer2/AutoLoginButton" to="." method="_on_AutoLoginButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Logout/LogoutButton" to="." method="_on_LogoutButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
